# crispy-dollop

./: .gitignore  CMakeLists.txt  README.md  antivirus.py
src/: main.cpp  realtime_monitor.cpp  realtime_monitor.h  scanner.cpp  scanner.h
src/behavioral/: behavior_analyzer.h
src/core/: detection_engine.h
src/memory/: memory_scanner.h
src/ml_engine/: ml_detector.h
src/sandbox/: sandbox_manager.h
test_samples/: test_malware.cpp
tests/: run_tests.cpp  test_framework.h
tests/unit_tests/: behavior_analyzer_tests.cpp  ml_detector_tests.cpp  sandbox_tests.cpp  scanner_tests.cpp
